fixed sonar issues;
Signed-off-by: Stefan Maute <stefan.maute@bosch.io>